WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268046
[iOS] Time picker fails to blur after tapping the page while editing hour/minute text fields
https://bugs.webkit.org/show_bug.cgi?id=268046
Summary
[iOS] Time picker fails to blur after tapping the page while editing hour/min...
Wenson Hsieh
Reported
2024-01-24 17:17:36 PST
rdar://119175928
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-01-24 17:26:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23212
EWS
Comment 2
2024-01-24 21:53:30 PST
Committed
273469@main
(a166cbc7846f): <
https://commits.webkit.org/273469@main
> Reviewed commits have been landed. Closing PR #23212 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug